methods.basics.Methods.scala.error
Erreur de compilation :
Methods:1: error: recursive variable nbPas needs type
var nbPas=nbPas+1
          ^